--- a/main.html
+++ b/main.html
@@ -9,7 +9,9 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Sorted Bands</h1>
-<ul id="band"></ul>
+
+	<ul id="bands"></ul>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
