--- a/main.html
+++ b/main.html
@@ -8,9 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Sorted Bands</h1>
-
-	<ul id="bands"></ul>
+	 <h1>Sorted Articles</h1>
+    <ul id="band"></ul>
 
     <script type="text/javascript" src="./script.js">
 </script>
