--- a/main.html
+++ b/main.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sorted Articles</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        #bands {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        #bands li {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	 <h1>Sorted Articles</h1>
-    <ul id="band"></ul>
+    <h1>Sorted Articles</h1>
+    <ul id="bands"></ul>
 
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <script src="script.js">
+	</script>
 </body>
-
 </html>
+		
